overflow bug fix #3

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@
 }
 html,
 body {
+  position: relative;
   overflow-x: hidden;
 }
 
